[gd_scene load_steps=4 format=3 uid="uid://c10oafir74jru"]

[ext_resource type="Theme" uid="uid://5whm1igkt23h" path="res://Themes/GD-Theme.tres" id="1_tpldm"]
[ext_resource type="Script" uid="uid://b8waqrds52wpj" path="res://ram_viewer.gd" id="2_uh1ye"]
[ext_resource type="FontFile" uid="uid://bfhb150qcy4oh" path="res://Fonts/FiraCode-Regular.ttf" id="3_6qvi0"]

[node name="Control" type="AcceptDialog"]
canvas_item_default_texture_filter = 3
title = "RAM and Stack Viewer"
initial_position = 1
size = Vector2i(1200, 810)
visible = true
theme = ExtResource("1_tpldm")
ok_button_text = "CLOSE"
dialog_hide_on_ok = false
dialog_close_on_escape = false
script = ExtResource("2_uh1ye")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/PanelContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
text = "RAM"
horizontal_alignment = 1

[node name="PanelContainer" type="ScrollContainer" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer/PanelContainer3/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="RamViewer" type="RichTextLabel" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer/PanelContainer3/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_6qvi0")
theme_override_fonts/mono_font = ExtResource("3_6qvi0")
theme_override_font_sizes/normal_font_size = 18
text = "0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0123
"
fit_content = true

[node name="HSeparator" type="HSeparator" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label2" type="Label" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
text = "Current Top of Dictionary: 0100H"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer2"]
layout_mode = 2
text = "Current Page:"

[node name="SpinBox" type="SpinBox" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer2"]
layout_mode = 2
max_value = 31.0

[node name="Label2" type="Label" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer2"]
layout_mode = 2
text = "(Cells 0 to 16383)"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer4" type="PanelContainer" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer2/PanelContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer2/PanelContainer4/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
text = "Data Stack"
horizontal_alignment = 1

[node name="PanelContainer2" type="ScrollContainer" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer2/PanelContainer4/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer2/PanelContainer4/VBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ParamViewer" type="RichTextLabel" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer2/PanelContainer4/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_6qvi0")
theme_override_font_sizes/normal_font_size = 18
text = "00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00123
"
fit_content = true

[node name="HSeparator" type="HSeparator" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer2/PanelContainer4/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label2" type="Label" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer2/PanelContainer4/VBoxContainer"]
layout_mode = 2
text = "Current Data Stack Pointer: 0100H"
horizontal_alignment = 1

[node name="PanelContainer5" type="PanelContainer" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer2/PanelContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer2/PanelContainer5/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
text = "Return Stack"
horizontal_alignment = 1

[node name="PanelContainer3" type="ScrollContainer" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer2/PanelContainer5/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer2/PanelContainer5/VBoxContainer/PanelContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="RetViewer" type="RichTextLabel" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer2/PanelContainer5/VBoxContainer/PanelContainer3/MarginContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_6qvi0")
theme_override_font_sizes/normal_font_size = 18
text = "00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00123
"
fit_content = true

[node name="HSeparator" type="HSeparator" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer2/PanelContainer5/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label2" type="Label" parent="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer2/PanelContainer5/VBoxContainer"]
layout_mode = 2
text = "Current Return Stack Pointer: 0100H"
horizontal_alignment = 1

[connection signal="canceled" from="." to="." method="_on_canceled"]
[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="value_changed" from="PanelContainer/PanelContainer2/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer2/SpinBox" to="." method="_on_spin_box_value_changed"]
